--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,11 +1,11 @@
 
 <header>
     <div class="navbarSuperior">
-        <a href="/users/login"><i class="fa-solid fa-user-check"></i> Ingresar</a>
+        <a href="/user/login"><i class="fa-solid fa-user-check"></i> Ingresar</a>
         <p> | </p>
-        <a href="/users/register"><i class="fa-solid fa-user-plus"></i> Registrarse</a>
+        <a href="/user/register"><i class="fa-solid fa-user-plus"></i> Registrarse</a>
         <p> | </p>
-        <a href="/users/cart"><i class="fa-solid fa-cart-shopping"></i> Carrito</a>
+        <a href="/user/cart"><i class="fa-solid fa-cart-shopping"></i> Carrito</a>
         &nbsp&nbsp
     </div>
 
