--- a/views/products/productCreate.ejs
+++ b/views/products/productCreate.ejs
@@ -25,69 +25,61 @@
                 <h3 class="titulares">Formulario para creación de productos en stock</h3>
                 <p>Las caracteristicas ingresadas pueden ser modificadas en cualquier momento</p>
                 </div>
-                <form action="/views/products/productCreate" method="POST" enctype="multipart/form-data" class="create__product-form">
+                <form action="/products/create/confirm" method="POST" enctype="multipart/form-data" class="create__product-form">
                   <!-- Nombre del producto -->
                   <br>
                 <div>
-                  <label for="productName" class="form__label">Nombre del producto:</label>
-                  <input type="text" name="productName" placeholder="Complete este campo" class ="form__input"></input>
+                  <label for="nombre" class="form__label">Nombre del producto:</label>
+                  <input type="text" name="name" placeholder="Complete este campo" class ="form__input"></input>
                   <br>
-                </div>
-                <br>
-                <!-- Tarea ingreso o modificación del producto -->
-                <div>
-                    <label for="productTarea" class="form__label" placeholder="Seleccione el tipo de tarea">Tipo de tarea</label>
-                    <select name="productTarea" id="productTarea" class="form__input">
-                        <option value="">Alta</option>
-                    </select>
                 </div>
                 <br>
 
                 <!-- Categoria del producto -->
                   <div>
-                  <label for="productCategory" class="form__label" placeholder="Seleccione una categoria">Categoria:</label>
-                  <select name="productCategory" id="productCategory" class="form__input">
-                    <option value=""></option>
-                    <option value="">Perros</option>
-                    <option value="">Gatos</option>
-                    <option value="">Roedores</option>
-                    <option value="">Peces</option>
-                    <option value="">Ofertas</option>
+                  <label for="category" class="form__label" placeholder="Seleccione una categoria">Categoria:</label>
+                  <select name="category" id="productCategory" class="form__input">
+                    <option value="" selected disabled>Seleccione una categoria</option>
+                    <option value="perros">Perros</option>
+                    <option value="gatos">Gatos</option>
+                    <option value="roedores">Roedores</option>
+                    <option value="peces">Peces</option>
+                    <option value="ofertas">Ofertas</option>
                   </select>
                 </div>
                 <br>
                   <!-- Medidas del producto -->
                     <div>
-                  <label for="productSize" class="form__label">Medidas del producto</label>
+                  <label for="weight" class="form__label">Kg's</label>
                   <br>
-                  <input type="text" name="productSize" placeholder="120 x 90 x 50" class ="form__input" value="<%= locals.oldData? oldData.productSize : null%>"><br>
+                  <input type="text" name="weight" placeholder="50" class ="form__input" value="<%= locals.oldData? oldData.productSize : null%>"><br>
                 </div>
                 <br>
                   <!-- Img del producto -->
                   <div>
-                  <label for="productImg" class="form__label">Elige una imagen</label>
+                  <label for="thumbnail" class="form__label">Elige una imagen</label>
                   <br>
-                  <input type="file" name="productImg" id="productImg" class ="form__input" accept="image/*" value="<%= locals.oldData? oldData.productImg : null%>"><br>
+                  <input type="file" name="thumbnail" id="productImg" class ="form__input" accept="image/*" value="<%= locals.oldData? oldData.productImg : null%>"><br>
                 </div>
                 <br>
                   <!-- Precio del producto -->
                 <div>
-                  <label for="productPrice" class="form__label">Precio:</label>
-                  <input type="text" name="productPrice" id="productPrice" class ="form__input" placeholder="$"></input> <br>
+                  <label for="price" class="form__label">Precio:</label>
+                  <input type="text" name="price" id="productPrice" class ="form__input" placeholder="$"></input> <br>
                 </div>
                 <br>
                 <!--Precio del producto con descuento-->
                 <div>
-                  <label for="Pricediscount" class="form__label">Precio con descuento:</label>
-                  <input type="text" name="Pricediscount" id="Priced" class ="form__input" placeholder="$"></input>
+                  <label for="discount" class="form__label">Precio con descuento:</label>
+                  <input type="text" name="discount" id="Priced" class ="form__input" placeholder="$"></input>
                   <br>
                 </div>
                   <!-- Descripción del producto -->
                   <div>
-                  <label for="productDescription" class="form__label">Escriba una descripción del producto</label>
+                  <label for="description" class="form__label">Escriba una descripción del producto</label>
                   <br>
                   <br>
-                  <textarea type="text" name="productDescription" placeholder="Escriba aqui los detalles del producto."><%= locals.oldData? oldData.productDescription : null%></textarea>
+                  <textarea type="text" name="description" placeholder="Escriba aqui los detalles del producto."><%= locals.oldData? oldData.productDescription : null%></textarea>
                 </div>
                 <br>
                   <div>
