--- a/views/products/productDetail.ejs
+++ b/views/products/productDetail.ejs
@@ -27,7 +27,7 @@
                 <article>
                     <div class="detail__container">
                         <div class="card__detail">
-                            <img class="detail_prod__imag" src="<%= producto.image%>" title="<%= producto.name%>"></a>
+                            <img class="detail_prod__imag" src="/images/products/<%= producto.thumbnail%>" title="<%= producto.name%>"></a>
                             <p class="descripciones"><%= producto.name%> </p>
                             </a>
                             <p class="precios">ANTES: $<%= producto.price%></p>
