--- a/views/users/login.ejs
+++ b/views/users/login.ejs
@@ -33,7 +33,7 @@
                 <p><input type="password" name="password" placeholder="Contraseña" required></input></p>
                 <!-- Pendiente boton para mostrar contraseña -->
                 <br>
-                <input type="checkbox" name="datosUsuario" value="1" checked>
+                <input type="checkbox" name="datosUsuario">
                 <label>Recordar mis datos</label>
                 <br>
                 <button class="sendButton" type="submit"><a href="/">Enviar</a></button>
