--- a/views/users/register.ejs
+++ b/views/users/register.ejs
@@ -36,7 +36,7 @@
             </div>
             <% } %>
             <!-- ERRORS END -->
-            <form action="/views/users/register" method="POST" enctype="multipart/form-data">
+            <form action="/user/register/confirm" method="POST" enctype="multipart/form-data">
 
                 <label for="nombreyapellido">Nombre y apellido</label>
                 <p><input type="text" name="nombreyapellido" placeholder="Ingrese su nombre" required>
